repeat search with ()'s around query when no hits are returned and there is more than one term in the query.
git-svn-id: http://sesat.no/svn/sesat-kernel/trunk@2530 cdc3010f-a60b-0410-91f3-d90f869209c8