@@ -57,6 +57,7 @@ public class RunningQueryImpl extends AbstractRunningQuery implements RunningQue
     private static final Logger ANALYSIS_LOG = Logger.getLogger("no.schibstedsok.front.searchportal.analyzer.Analysis");
 
     private static final String ERR_PARSING = "Unable to create RunningQuery's query due to ParseException";
+    private static final String ERR_RUN_QUERY = "Failure to run query";
 
     private final AnalysisRuleFactory rules;
     private String queryStr = "";
@@ -82,11 +83,7 @@ public class RunningQueryImpl extends AbstractRunningQuery implements RunningQue
 
         super(cxt);
 
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("RunningQuery(cxt," + query + "," + parameters + ")");
-        } //</editor-fold>
-
+        LOG.trace("RunningQuery(cxt," + query + "," + parameters + ")");
 
         queryStr = trimDuplicateSpaces(query);
 
@@ -97,16 +94,16 @@ public class RunningQueryImpl extends AbstractRunningQuery implements RunningQue
         this.parameters = parameters;
         this.locale = new Locale("no", "NO");
 
-        final TokenEvaluatorFactoryImpl.Context tokenEvalFactoryCxt = (TokenEvaluatorFactoryImpl.Context) ContextWrapper.wrap(
-                TokenEvaluatorFactoryImpl.Context.class,
-                new BaseContext[]{
-                    context,
-                    new QueryStringContext() {
-                        public String getQueryString() {
-                            return RunningQueryImpl.this.getQueryString();
-                        }
-                    }
-        });
+        final TokenEvaluatorFactoryImpl.Context tokenEvalFactoryCxt = 
+                (TokenEvaluatorFactoryImpl.Context) ContextWrapper.wrap(
+                    TokenEvaluatorFactoryImpl.Context.class,
+                    new BaseContext[]{
+                        context,
+                        new QueryStringContext() {
+                            public String getQueryString() {
+                                return RunningQueryImpl.this.getQueryString();
+                            }
+                        }});
 
         // This will among other things perform the initial fast search
         // for textual analysis.
@@ -159,28 +156,20 @@ public class RunningQueryImpl extends AbstractRunningQuery implements RunningQue
      * @return user tip
      */
     public String getGlobalSearchTips () {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled())  {
-            LOG.trace("getGlobalSearchTips()");
-        } //</editor-fold>
-//        if (AdvancedQueryBuilder.isAdvancedQuery(queryStr)) {
-//            return TextMessages.valueOf(
-//                (TextMessages.Context) ContextWrapper.wrap(
-//                    TextMessages.Context.class,
-//                    new BaseContext[]{context})).getMessage("searchtip.use+-");
-//        } else {
-            return null;
-//        }
+        
+        LOG.trace("getGlobalSearchTips()");
+        return null;
     }
 
 
     public Integer getNumberOfHits(final String configName) {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("getNumberOfHits()");
-        } //</editor-fold>
+        
+        LOG.trace("getNumberOfHits()");
+
         Integer i = (Integer) hits.get(configName);
-        if (i == null) { i = new Integer(0); }
+        if (i == null) { 
+            i = Integer.valueOf(0); 
+        }
         return i;
     }
 
@@ -190,10 +179,9 @@ public class RunningQueryImpl extends AbstractRunningQuery implements RunningQue
      * @throws InterruptedException
      */
     public void run() throws InterruptedException {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("run()");
-        } //</editor-fold>
+        
+        LOG.trace("run()");
+
         try {
 
             final Collection commands = new ArrayList();
@@ -228,15 +216,11 @@ public class RunningQueryImpl extends AbstractRunningQuery implements RunningQue
 
                 if (rule != null) {
 
-                    //if (context.getSearchMode().getKey().equals("d") && offset == 0) {
                     if (context.getSearchMode().isQueryAnalysisEnabled() && offset == 0) {
 
-                        if (LOG.isDebugEnabled()) {
-                            LOG.debug("run: searchMode.getKey().equals(d) && offset == 0");
-                        }
+                        LOG.debug("run: searchMode.getKey().equals(d) && offset == 0");
                         
-                        ANALYSIS_LOG.info(
-                                " <analysis name=\"" + searchConfiguration.getRule() + "\">");
+                        ANALYSIS_LOG.info(" <analysis name=\"" + searchConfiguration.getRule() + "\">");
 
                         LOG.debug("Scoring old style for " + searchConfiguration.getRule());
                         final int oldScore = rule.evaluate(queryStr, tokenEvaluatorFactory);
@@ -250,25 +234,26 @@ public class RunningQueryImpl extends AbstractRunningQuery implements RunningQue
                             LOG.fatal("OldScore: " + oldScore + "; NewScore: " + newScore + "; for " + searchConfiguration.getRule());
                         }
 
-                        if (LOG.isDebugEnabled()) {
-                            LOG.debug("Score for " + searchConfiguration.getName() + " is " + newScore);
+                        LOG.debug("Score for " + searchConfiguration.getName() + " is " + newScore);
+
+                        if(newScore != 0 ){ 
+                            ANALYSIS_LOG.info("  <score>" + newScore + "</score>"); 
                         }
-                        if(newScore != 0 ){ ANALYSIS_LOG.info("  <score>" + newScore + "</score>"); }
                         ANALYSIS_LOG.info(" </analysis>");
 
                         scores.put(searchConfiguration.getName(), new Integer(newScore));
 
                         if (searchConfiguration.isAlwaysRunEnabled() || newScore >= searchConfiguration.getRuleThreshold()) {
-                            if (LOG.isDebugEnabled()) {
-                                LOG.debug("Adding " + searchConfiguration.getName());
-                            }
+                            LOG.debug("Adding " + searchConfiguration.getName());
                             commands.add(SearchCommandFactory.createSearchCommand(searchCmdCxt, parameters));
                         }
 
                     } else if (searchConfiguration.isAlwaysRunEnabled()) {
                         commands.add(SearchCommandFactory.createSearchCommand(searchCmdCxt, parameters));
                     }
+                    
                 } else {
+                    
                     // Optimisation. Alternate between the two web searches.
                     if (isNorwegian(searchConfiguration) || isInternational(searchConfiguration)) {
                         final String searchType = getSingleParameter("s");
@@ -346,28 +331,23 @@ public class RunningQueryImpl extends AbstractRunningQuery implements RunningQue
                 // replace all DefaultClause with an OrClause 
                 //  [simply done with wrapping the query string inside ()'s ]
                 // create and run a new RunningQueryImpl
-                if( !queryStr.startsWith("(") && !queryStr.endsWith(")") ){
+                if( !queryStr.startsWith("(") && !queryStr.endsWith(")") && queryObj.getTermCount()>1 ){
                     new RunningQueryImpl(context,'('+queryStr+')', parameters).run();
                 }
             }
             
         } catch (Exception e) {
-            LOG.error("Failure to run query.", e);
+            LOG.error(ERR_RUN_QUERY, e);
         }
     }
 
     private String getSingleParameter(final String paramName) {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("getSingleParameter()");
-        } //</editor-fold>
+        
+        LOG.trace("getSingleParameter()");
+
         final String[] param = (String[]) parameters.get(paramName);
 
-        if (param != null) {
-            return param[0];
-        } else {
-            return null;
-        }
+        return (param != null) ?param[0] : null;
     }
 
     private boolean isInternational(final SearchConfiguration searchConfiguration) {
@@ -383,92 +363,79 @@ public class RunningQueryImpl extends AbstractRunningQuery implements RunningQue
     }
 
     public int getNumberOfTerms() {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("getNumberOfTerms()");
-        } //</editor-fold>
+        
+        LOG.trace("getNumberOfTerms()");
+
         return QueryTokenizer.tokenize(queryStr).size();
     }
 
 
     public String getQueryString() {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("getQueryString()");
-        } //</editor-fold>
+        
+        LOG.trace("getQueryString()");
+
         return queryStr;
     }
 
     public int getOffset() {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("getOffset(): " + offset);
-        } //</editor-fold>
+        
+        LOG.trace("getOffset(): " + offset);
+
         return offset;
     }
 
     public void setOffset(final int offset) {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("setOffset():" + offset);
-        } //</editor-fold>
+        LOG.trace("setOffset():" + offset);
+
         this.offset = offset;
     }
 
     public Locale getLocale() {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("getLocale()");
-        } //</editor-fold>
+        
+        LOG.trace("getLocale()");
+
         return locale;
     }
 
     public SearchMode getSearchMode() {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("getSearchMode()");
-        } //</editor-fold>
+        
+        LOG.trace("getSearchMode()");
+
         return context.getSearchMode();
     }
 
     public List getSources() {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("getSources()");
-        } //</editor-fold>
+        
+        LOG.trace("getSources()");
+
         return sources;
     }
 
     public void addSource(final Modifier modifier) {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("addSource()");
-        } //</editor-fold>
+        
+        LOG.trace("addSource()");
+
         sources.add(modifier);
     }
 
     public List getEnrichments() {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("getEnrichments()");
-        } //</editor-fold>
+        
+        LOG.trace("getEnrichments()");
+
         return enrichments;
     }
 
     public TokenEvaluatorFactory getTokenEvaluatorFactory() {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("getTokenEvaluatorFactory()");
-        } //</editor-fold>
+        
+        LOG.trace("getTokenEvaluatorFactory()");
+
         return tokenEvaluatorFactory;
     }
 
     // TODO Find some other way to do this. Really do!
     public String getSourceParameters(final String source) {
-        // <editor-fold defaultstate="collapsed" desc=" Trace ">
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("getSourceParameters() Source=" + source);
-        } //</editor-fold>
+        
+        LOG.trace("getSourceParameters() Source=" + source);
 
         if (source.equals("Norske nettsider")) {
             return "c=n";
